# PlaceRoute

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  default.nix  hyperparameter_opt.py  hyperparameter_opt.sh  meson.build  results.pkl  run_benchmarks.py  setup.py  show_history.py
.github/workflows/: build.yml  warnings.yml  wheels.yml
benchmarks/: eval2008.pl  gen_routing_benchmark.pl
benchmarks/ISPD02/ibm01/: ibm01.nets.xz  ibm01.nodes.xz  ibm01.pl.xz  ibm01.scl.xz  ibm01.wts
benchmarks/ISPD02/ibm02/: ibm02.aux  ibm02.nets.xz  ibm02.nodes.xz  ibm02.pl.xz  ibm02.scl.xz  ibm02.wts
benchmarks/ISPD02/ibm03/: ibm03.aux  ibm03.nets.xz  ibm03.nodes.xz  ibm03.pl.xz  ibm03.scl.xz  ibm03.wts
benchmarks/ISPD02/ibm04/: ibm04.aux  ibm04.nets.xz  ibm04.nodes.xz  ibm04.pl.xz  ibm04.scl.xz  ibm04.wts
benchmarks/ISPD02/ibm05/: ibm05.nets.xz  ibm05.nodes.xz  ibm05.pl.xz  ibm05.scl.xz  ibm05.wts
benchmarks/ISPD02/ibm06/: ibm06.aux  ibm06.nets.xz  ibm06.nodes.xz  ibm06.pl.xz  ibm06.scl.xz  ibm06.wts
benchmarks/ISPD02/ibm07/: ibm07.aux  ibm07.nets.xz  ibm07.nodes.xz  ibm07.pl.xz  ibm07.scl.xz  ibm07.wts
benchmarks/ISPD02/ibm08/: ibm08.aux  ibm08.nets.xz  ibm08.nodes.xz  ibm08.pl.xz  ibm08.scl.xz  ibm08.wts
benchmarks/ISPD02/ibm09/: ibm09.aux  ibm09.nets.xz  ibm09.nodes.xz  ibm09.pl.xz  ibm09.scl.xz  ibm09.wts
benchmarks/ISPD02/ibm10/: ibm10.aux  ibm10.nets.xz  ibm10.nodes.xz  ibm10.pl.xz  ibm10.scl.xz  ibm10.wts
benchmarks/ISPD02/ibm11/: ibm11.aux  ibm11.nets.xz  ibm11.nodes.xz  ibm11.pl.xz  ibm11.scl.xz  ibm11.wts
benchmarks/ISPD02/ibm12/: ibm12.aux  ibm12.nets.xz  ibm12.nodes.xz  ibm12.pl.xz  ibm12.scl.xz  ibm12.wts
benchmarks/ISPD02/ibm13/: ibm13.aux  ibm13.nets.xz  ibm13.nodes.xz  ibm13.pl.xz  ibm13.scl.xz  ibm13.wts
benchmarks/ISPD02/ibm14/: ibm14.aux  ibm14.nets.xz  ibm14.nodes.xz  ibm14.pl.xz  ibm14.scl.xz  ibm14.wts
benchmarks/ISPD02/ibm15/: ibm15.aux  ibm15.nets.xz  ibm15.nodes.xz  ibm15.pl.xz  ibm15.scl.xz  ibm15.wts
benchmarks/ISPD02/ibm16/: ibm16.aux  ibm16.nets.xz  ibm16.nodes.xz  ibm16.pl.xz  ibm16.scl.xz  ibm16.wts
benchmarks/ISPD02/ibm17/: ibm17.aux  ibm17.nets.xz  ibm17.nodes.xz  ibm17.pl.xz  ibm17.scl.xz  ibm17.wts
benchmarks/ISPD02/ibm18/: ibm18.aux  ibm18.nets.xz  ibm18.nodes.xz  ibm18.pl.xz  ibm18.scl.xz
benchmarks/ISPD06/adaptec1/: adaptec1.inf.aux  adaptec1.inf.nodes.xz  adaptec1.nets.xz  adaptec1.nodes.xz  adaptec1.pl.xz  adaptec1.scl.xz
benchmarks/ISPD06/adaptec2/: adaptec2.aux  adaptec2.inf.aux  adaptec2.inf.nodes.xz  adaptec2.nets.xz  adaptec2.nodes.xz  adaptec2.pl.xz  adaptec2.scl.xz  adaptec2.wts
benchmarks/ISPD06/adaptec3/: adaptec3.aux  adaptec3.inf.aux  adaptec3.inf.nodes.xz  adaptec3.nets.xz  adaptec3.nodes.xz  adaptec3.pl.xz  adaptec3.scl.xz
benchmarks/ISPD06/adaptec4/: adaptec4.aux  adaptec4.inf.aux  adaptec4.inf.nodes.xz  adaptec4.nets.xz  adaptec4.nodes.xz  adaptec4.pl.xz  adaptec4.scl.xz
benchmarks/ISPD06/adaptec5/: adaptec5.aux  adaptec5.nets.xz  adaptec5.nodes.xz  adaptec5.pl.xz  adaptec5.scl.xz
benchmarks/ISPD06/bigblue1/: bigblue1.aux  bigblue1.inf.aux  bigblue1.inf.nodes.xz  bigblue1.nets.xz  bigblue1.nodes.xz  bigblue1.pl.xz  bigblue1.scl.xz
benchmarks/ISPD06/bigblue2/: bigblue2.aux  bigblue2.inf.aux  bigblue2.inf.nodes.xz  bigblue2.nets.xz  bigblue2.nodes.xz  bigblue2.pl.xz  bigblue2.scl.xz
benchmarks/ISPD06/bigblue3/: bigblue3.aux  bigblue3.inf.aux  bigblue3.inf.nodes.xz  bigblue3.nets.xz  bigblue3.nodes.xz  bigblue3.pl.xz  bigblue3.scl.xz
benchmarks/ISPD06/bigblue4/: bigblue4.aux  bigblue4.inf.aux  bigblue4.inf.nodes.xz  bigblue4.nets.xz  bigblue4.nodes.xz  bigblue4.pl.xz  bigblue4.scl.xz
benchmarks/ISPD06/newblue1/: newblue1.aux  newblue1.nets.xz  newblue1.nodes.xz  newblue1.pl.xz  newblue1.scl.xz
benchmarks/ISPD06/newblue2/: newblue2.aux  (+4 more)
benchmarks/ISPD08/: adaptec1.capo70.3d.35.50.90.gr.xz  adaptec2.mpl60.3d.35.20.100.gr.xz  adaptec3.dragon70.3d.30.50.90.gr.xz  adaptec4.aplace60.3d.30.50.90.gr.xz  adaptec5.mfar50.3d.50.20.100.gr.xz  bigblue1.capo60.3d.50.10.100.gr.xz  bigblue2.mpl60.3d.40.60.60.gr.xz  bigblue3.aplace70.3d.50.10.90.m8.gr.xz  bigblue4.fastplace70.3d.80.20.80.gr.xz  newblue1.ntup50.3d.30.50.90.gr.xz  newblue2.fastplace90.3d.50.20.100.gr.xz  newblue3.kraftwerk80.3d.40.50.90.gr.xz  newblue4.mpl50.3d.40.10.95.gr.xz  newblue5.ntup50.3d.40.10.100.gr.xz  newblue6.mfar80.3d.60.10.100.gr.xz  newblue7.kraftwerk70.3d.80.20.82.m8.gr.xz
pycoloquinte/: CMakeLists.txt  __main__.py  benchmark_quadratic_models.py  circuit.py  coloquinte.py  module.cpp  net_topology.py  setup.py  test_net_topology.py  wheel.sh
pycoloquinte_pybind/: CMakeLists.txt  module.cpp  setup.py
python/: __main__.py  circuit.py  ispd_reader.py  test_net_topology.py
src/: circuit.cpp  circuit.hpp  coloquinte.cpp  coloquinte.hpp  common.cpp  export.cpp  parameters.cpp
src/place_detailed/: abacus_legalizer.cpp  abacus_legalizer.hpp  detailed_placement.cpp  detailed_placement.hpp  incr_net_model.cpp  incr_net_model.hpp  legalizer.cpp  legalizer.hpp  place_detailed.cpp  place_detailed.hpp  row_legalizer.cpp  row_legalizer.hpp  row_neighbourhood.cpp  row_neighbourhood.hpp  tetris_legalizer.cpp  tetris_legalizer.hpp
src/place_global/: density_grid.cpp  density_grid.hpp  density_legalizer.cpp  density_legalizer.hpp  descent.cpp  descent.hpp  gradient_descent.cpp  gradient_descent.hpp  interior_point_transportation.hpp  net_model.cpp  net_model.hpp  partitioning.cpp  partitioning.hpp  place_global.cpp  place_global.hpp  topology.cpp  topology.hpp  transportation.cpp  transportation.hpp  transportation_1d.cpp  transportation_1d.hpp  wirelength_model.cpp  wirelength_model.hpp
src/utils/: helpers.hpp  norm.hpp
test/: CMakeLists.txt  net_topology.cpp  run_benchmarks.sh  test_density_grid.cpp  test_density_legalizer.cpp  test_detailed_placement.cpp  test_expansion.cpp  test_incr_net_model.cpp  test_interior_point_transportation.cpp  test_legalizer.cpp  test_net_model.cpp  test_row_legalizer.cpp  test_row_neighbourhood.cpp  test_transportation.cpp  test_wirelength_model.cpp
(+26 files in other folders)
